SEO updated, Nav links hover added

--- a/alanthilak/index.html
+++ b/alanthilak/index.html
@@ -1,14 +1,60 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/ATKSI.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alan Thilak Karate School International | Best Karate School in India | #1 Martial Arts Academy in Kerala, Kannur &
-    Kasaragod | Train with the Best!</title>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Title & Meta Description -->
+  <title>Alan Thilak Karate School Payyanur | Premier Karate & Martial Arts Academy</title>
+  <meta name="description"
+    content="Welcome to Alan Thilak Karate School Payyanur, the premier destination for top-notch karate and martial arts training in Kerala. Train with world-class instructors and join our elite community." />
+  <meta name="keywords"
+    content="Alan Thilak, Karate, Martial Arts, Payyanur, Kerala, Karate School, Self Defense, Martial Arts Academy" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://alanthilakpayyanur.com/" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://alanthilakpayyanur.com/" />
+  <meta property="og:title" content="Alan Thilak Karate School Payyanur | Premier Karate & Martial Arts Academy" />
+  <meta property="og:description"
+    content="Join Alan Thilak Karate School Payyanur for world-class karate and martial arts training in Kerala. Discover our top-tier coaching and vibrant community." />
+  <meta property="og:image" content="https://alanthilakpayyanur.com/ATKSI.svg" />
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://alanthilakpayyanur.com/" />
+  <meta name="twitter:title" content="Alan Thilak Karate School Payyanur | Premier Karate & Martial Arts Academy" />
+  <meta name="twitter:description"
+    content="Experience world-class karate training at Alan Thilak Karate School Payyanur. Join us in Kerala and train with the best in martial arts." />
+  <meta name="twitter:image" content="https://alanthilakpayyanur.com/ATKSI.svg" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/ATKSI.svg" />
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SportsActivityLocation",
+        "name": "Alan Thilak Karate School Payyanur",
+        "url": "https://alanthilakpayyanur.com/",
+        "logo": "https://alanthilakpayyanur.com/ATKSI.svg",
+        "description": "Premier karate and martial arts training in Payyanur, Kerala. Train with world-class instructors and become part of our elite community.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Payyanur",
+          "addressRegion": "Kerala",
+          "addressCountry": "IN"
+        }
+      }
+      </script>
   </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
