--- a/alanthilak/index.html
+++ b/alanthilak/index.html
@@ -1,60 +1,87 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
-  <!-- Title & Meta Description -->
-  <title>Alan Thilak Karate School Payyanur | Premier Karate & Martial Arts Academy</title>
+  <!-- Character Set & Compatibility -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+
+  <!-- Primary Meta Tags -->
+  <title>Alan Thilak Karate School International | Best Martial Arts Academy in Kerala | India's Top Karate Training |
+    Best Karate School In Kannur & Kasaragod</title>
   <meta name="description"
-    content="Welcome to Alan Thilak Karate School Payyanur, the premier destination for top-notch karate and martial arts training in Kerala. Train with world-class instructors and join our elite community." />
+    content="Official Karate training center in Payyanur, Kerala. Learn self-defense, katas, and martial arts from certified instructors. Kids & Adults classes. Free trial session available.">
   <meta name="keywords"
-    content="Alan Thilak, Karate, Martial Arts, Payyanur, Kerala, Karate School, Self Defense, Martial Arts Academy" />
-  <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://alanthilakpayyanur.com/" />
-  
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://alanthilakpayyanur.com/" />
-  <meta property="og:title" content="Alan Thilak Karate School Payyanur | Premier Karate & Martial Arts Academy" />
-  <meta property="og:description"
-    content="Join Alan Thilak Karate School Payyanur for world-class karate and martial arts training in Kerala. Discover our top-tier coaching and vibrant community." />
-  <meta property="og:image" content="https://alanthilakpayyanur.com/ATKSI.svg" />
-  
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://alanthilakpayyanur.com/" />
-  <meta name="twitter:title" content="Alan Thilak Karate School Payyanur | Premier Karate & Martial Arts Academy" />
-  <meta name="twitter:description"
-    content="Experience world-class karate training at Alan Thilak Karate School Payyanur. Join us in Kerala and train with the best in martial arts." />
-  <meta name="twitter:image" content="https://alanthilakpayyanur.com/ATKSI.svg" />
-  
-  <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/ATKSI.svg" />
-  <!-- Structured Data (JSON-LD) -->
+    content="karate classes payyanur, martial arts training kerala, self-defense course payyanur, kids karate payyanur, best karate academy kannur district, alan thilak karate school">
+
+  <!-- Local Business Schema -->
   <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "SportsActivityLocation",
-        "name": "Alan Thilak Karate School Payyanur",
-        "url": "https://alanthilakpayyanur.com/",
-        "logo": "https://alanthilakpayyanur.com/ATKSI.svg",
-        "description": "Premier karate and martial arts training in Payyanur, Kerala. Train with world-class instructors and become part of our elite community.",
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Payyanur",
-          "addressRegion": "Kerala",
-          "addressCountry": "IN"
-        }
-      }
-      </script>
+  {
+    "@context": "https://schema.org",
+    "@type": "SportsClub",
+    "name": "Alan Thilak Karate School International",
+    "image": "https://alanthilakpayyanur.in/images/og-image.jpg",
+    "@id": "https://alanthilakpayyanur.in/#organization",
+    "url": "https://alanthilakpayyanur.in/",
+    "telephone": "+919526152158",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "City Center, Main Road Payyanur",
+      "addressLocality": "Payyanur",
+      "postalCode": "670307",
+      "addressRegion": "Kerala",
+      "addressCountry": "IN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 12.1051748,
+      "longitude": 75.2052757
+    },
+    "openingHoursSpecification": {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday",
+        "Saturday",
+        "Sunday"
+      ],
+      "opens": "06:00",
+      "closes": "20:00"
+    },
+    "sameAs": [
+      "https://www.facebook.com/profile.php?id=100064041067943",
+      "https://www.instagram.com/alanthilakpayyanur/",
+      "https://www.youtube.com/@alanthilakkarateteampayyan9006"
+    ]
+  }
+  </script>
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://alanthilakpayyanur.in/">
+<meta property="og:title" content="Alan Thilak Karate Academy | Best Karate Classes in Payyanur">
+<meta property="og:description"
+  content="Official Karate training center in Payyanur. Certified instructors, flexible timings, and world-class facilities. Book your free trial class today!">
+<meta property="og:image" content="https://alanthilakpayyanur.in/images/og-image.jpg">
+
+<!-- Twitter Meta -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@alanthilakkarate">
+<meta name="twitter:title" content="Best Karate Training in Payyanur | Alan Thilak Academy">
+<meta name="twitter:description"
+  content="Join Kerala's premier karate school with 15+ years of experience. Kids & adult classes available. Self-defense workshops every month.">
+<meta name="twitter:image" content="https://alanthilakpayyanur.in/images/twitter-card.jpg">
+
+  <!-- Preconnects & Preloads -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   </head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
-</html>
