--- a/alanthilak/index.html
+++ b/alanthilak/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
 
 <head>
-  <!-- Character Set & Compatibility -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-
-  <!-- Primary Meta Tags -->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Title & Meta Description -->
   <title>Alan Thilak Karate School International | Best Martial Arts Academy in Kerala | India's Top Karate Training |
     Best Karate School In Kannur & Kasaragod</title>
   <meta name="description"
@@ -15,25 +13,57 @@
   <meta name="keywords"
     content="karate classes payyanur, martial arts training kerala, self-defense course payyanur, kids karate payyanur, best karate academy kannur district, alan thilak karate school">
 
-  <!-- Local Business Schema -->
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://alanthilakpayyanur.in/" />
+  <meta property="og:title" content="Alan Thilak Karate School Payyanur | Premier Karate & Martial Arts Academy" />
+  <meta property="og:description"
+    content="Join Alan Thilak Karate School Payyanur for world-class karate and martial arts training in Kerala. Discover our top-tier coaching and vibrant community." />
+  <meta property="og:image" content="https://alanthilakpayyanur.in/ATKSI.svg" />
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://alanthilakpayyanur.in/" />
+  <meta name="twitter:title" content="Alan Thilak Karate School Payyanur | Premier Karate & Martial Arts Academy" />
+  <meta name="twitter:description"
+    content="Experience world-class karate training at Alan Thilak Karate School Payyanur. Join us in Kerala and train with the best in martial arts." />
+  <meta name="twitter:image" content="https://alanthilakpayyanur.in/ATKSI.svg" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/ATKSI.svg" />
+  <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "SportsClub",
-    "name": "Alan Thilak Karate School International",
-    "image": "https://alanthilakpayyanur.in/images/og-image.jpg",
-    "@id": "https://alanthilakpayyanur.in/#organization",
-    "url": "https://alanthilakpayyanur.in/",
-    "telephone": "+919526152158",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "City Center, Main Road Payyanur",
-      "addressLocality": "Payyanur",
-      "postalCode": "670307",
-      "addressRegion": "Kerala",
-      "addressCountry": "IN"
+      {
+        "@context": "https://schema.org",
+        "@type": "SportsClub",
+        "name": "Alan Thilak Karate School International Payyanur",
+        "url": "https://alanthilakpayyanur.in/",
+        "logo": "https://alanthilakpayyanur.in/ATKSI.svg",
+        "@id": "https://alanthilakpayyanur.in/",
+        "telephone": "+919526152158",
+        "description": "Kerala's premier karate training institution with multiple branches across Kannur and Kasaragod districts": {
+        "@type": "PostalAddress",
+        "streetAddress": "City Center, Main Road Payyanur",
+        "addressLocality": "Payyanur",
+        "postalCode": "670307",
+        "addressRegion": "Kerala",
+        "addressCountry": "IN"
+      },
+      "founder": {
+      "@type": "Person",
+      "name": "Dai Sensei Moses Thilak",
+      "honorificSuffix": "9th Dan Black Belt",
+      "award": "International Referee"
     },
-    "geo": {
+    "award": [
+      "Best Karate School in South India 2021",
+      "Top Martial Arts Academy in Kerala 2020"
+    ],
+    "memberOf": {
+      "@type": "SportsClub",
+      "name": "World Karate Federation, Kerala Olympic Association, Kerala Sports Council, Kerala Karate Association"
+    }
+      "geo": {
       "@type": "GeoCoordinates",
       "latitude": 12.1051748,
       "longitude": 75.2052757
@@ -56,9 +86,15 @@
       "https://www.facebook.com/profile.php?id=100064041067943",
       "https://www.instagram.com/alanthilakpayyanur/",
       "https://www.youtube.com/@alanthilakkarateteampayyan9006"
-    ]
-  }
-  </script>
+    ],
+      }
+      </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://alanthilakpayyanur.in/">
@@ -75,13 +111,13 @@
   content="Join Kerala's premier karate school with 15+ years of experience. Kids & adult classes available. Self-defense workshops every month.">
 <meta name="twitter:image" content="https://alanthilakpayyanur.in/images/twitter-card.jpg">
 
-  <!-- Preconnects & Preloads -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!-- Preconnects & Preloads -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  </head>
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+</html>
